...
            modifier = Modifier.fillMaxWidth(),
            verticalAlignment = Alignment.CenterVertically
        ) {
            IconButton(onClick = onMenuClick) {
                Icon(
                    imageVector = Icons.Default.Menu,
                    contentDescription = "Menú",
                    tint = Color.White
                )
            }

            Column(
                modifier = Modifier
...
                IconButton(onClick = { onShoppingCart() }) {
                    LottieAnimation(
                        composition = composition,
                        iterations = LottieConstants.IterateForever,
                        modifier = Modifier
                            .height(40.dp)
                            .semantics { contentDescription = "BtnCart" }
                    )
                }
            } else {
                IconButton(onClick = { onLogin() }) {
                    Icon(
                        imageVector = Icons.Default.Person,
...
