...
    }

    Scaffold(
        containerColor = colorResource(R.color.white),
        topBar = {
            TopAppBar(
                title = { Text("Detalle de producto", color = Color.White) },
                navigationIcon = {
                    IconButton(onClick = { onBack() }) {
                        Icon(
                            painter = painterResource(R.drawable.ic_back),
                            contentDescription = "Volver",
                            tint = Color.White
...
                                viewModel.addToCart(p, quantity)
                                onCart()
                            }
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(48.dp).semantics { contentDescription = "BtnAdd" },
                        colors = ButtonDefaults.buttonColors(
                            containerColor = colorResource(R.color.buttons)
                        ),
                        shape = RoundedCornerShape(8.dp),
                    ) {
                        Text("Agregar", color = Color.White, fontWeight = FontWeight.Bold)
...
