...

                        Button(
                            onClick = onConfirm,
                            shape = RoundedCornerShape(8.dp),
                            colors = ButtonDefaults.buttonColors(containerColor = colorResource(R.color.buttons)),
                            modifier = Modifier.weight(1f)
                                .semantics { contentDescription = "BtnAccept" }
                        ) {
                            Text("Aceptar", color = Color.White, fontSize = 16.sp)
                        }
                    }
                }
            }
...
